# Corruption

./: .gitignore  CMakeLists.txt  colorManipulation.cpp  colorManipulation.hpp  edit.cpp  embedShader.sh  image.cpp  main.cpp  mingw-toolchain.cmake  shaderEmbeded.hpp
shaders/: blank.fs  colorRed.fs  effects.fs  glitch.fs  interestingPattern.fs  shiftRed.fs
